@@ -25,9 +25,5 @@
 #include "hier_util.h"
 
 void draw_tux_shadow(int player);
-void traverse_dag_for_shadow(SceneNode *node, const pp::Matrix& model_matrix);
-void draw_shadow_sphere(const pp::Matrix& model_matrix);
-void draw_shadow_vertex(double x, double y, double z, 
-			 const pp::Matrix& model_matrix );
 
 #endif // _TUX_SHADOW_H_
